# secure-data-encryption

./: .gitignore  data.json  key.key  main.py  pyproject.toml  requirements.txt
